--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "themes/icarus"]
 	path = themes/icarus
-	url = git@github.com:castbox/hexo-theme-icarus.gitt
+	url = git@github.com:castbox/hexo-theme-icarus.git
