--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ timezone: America/New_York
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://blogs.castbox.fm/
+url: http://blog.castbox.fm/
 root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
